samples/ut/intrinsic/minmax/Fail02.err
Fail02.z2(5, 28): error: matching parameter 2: actual 'Int' to formal 'Byte': no conversion possible