samples/ut/intrinsic/minmax/Fail02.z2
namespace org.z2legacy.samples.ut.intrinsic.minmax;

class Fail02 {
	def @main() {
		Intrinsic.Max<Byte>(5, 2000);
	}
}